syntax = "proto3";
package thesixnetwork.sixprotocol.nftoracle;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftoracle/types";

message OracleConfig { int32 minimum_confirmation = 1; }
